fix(client): text `revision note` overflow from container
Uses word-wrap: break-word on list-group-item class.

Fix #BB-246

--- a/src/client/stylesheets/style.less
+++ b/src/client/stylesheets/style.less
@@ -250,3 +250,8 @@ html {
 .Select-menu-outer {
 	z-index: 5;
 }
+/* Text wrapping : revision note */
+/* ============= */
+.list-group-item {
+	word-wrap: break-word;
+}
